force-app/main/default/objects/RiskUpdated__e/RiskUpdated__e.object-meta.xml
<CustomObject>
    <description>Event fired when a subject&apos;s risk is updated or a new assessment is created.</description>
    <label>Risk Updated</label>
    <pluralLabel>Risk Updated Events</pluralLabel>
</CustomObject>