force-app/main/default/objects/RiskUpdated__e/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <description>Risk band after update.</description>
    <label>Band</label>
    <length>20</length>
    <type>Text</type>
</CustomField>