force-app/main/default/objects/RiskUpdated__e/fields/NewScore__c.field-meta.xml
<CustomField>
    <fullName>NewScore__c</fullName>
    <description>New risk score.</description>
    <label>New Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>