force-app/main/default/objects/RiskUpdated__e/fields/ReasonCodes__c.field-meta.xml
<CustomField>
    <fullName>ReasonCodes__c</fullName>
    <description>Comma-separated reason codes contributing to the change.</description>
    <label>Reason Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>