force-app/main/default/objects/RiskUpdated__e/fields/SubjectId__c.field-meta.xml
<CustomField>
    <fullName>SubjectId__c</fullName>
    <description>Id of the Account or Contact whose risk changed.</description>
    <label>Subject Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>